Public Preview: Implemented Desktop Notifications!

--- a/lvc-config.json
+++ b/lvc-config.json
@@ -3,5 +3,6 @@
   "record-duration": 3,
   "channels": 2,
   "rate": 44100,
-  "chunk-size": 1024
+  "chunk-size": 1024,
+  "notifications-enabled": true
 }
