--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ tqdm
 more-itertools
 transformers>=4.19.0
 ffmpeg-python==0.2.0
-click~=8.0.4
+click~=8.1.3
 pyaudio~=0.2.11
 pydub
 git+https://github.com/openai/whisper.git
@@ -12,3 +12,5 @@ torch
 
 thefuzz~=0.19.0
 termcolor~=2.0.1
+gTTS~=2.3.0
+mpv~=0.1
