Public Preview: Implemented Voice Feedback 🚀

--- a/lvc-config.json
+++ b/lvc-config.json
@@ -1,6 +1,6 @@
 {
   "name": "alex",
-  "greeting": "Initializing Voice Control",
+  "greeting": "Get Charge Up!, Voice Control is up and running!",
   "record-duration": 3,
   "channels": 2,
   "rate": 44100,
