--- a/lvc-config.json
+++ b/lvc-config.json
@@ -1,7 +1,7 @@
 {
   "name": "alex",
   "greeting": "Welcome back!, Initializing Desktop Voice Control",
-  "record-duration": 3,
+  "record-duration": 2,
   "channels": 2,
   "rate": 44100,
   "chunk-size": 1024,
@@ -9,12 +9,18 @@
   "logs": true,
   "speech-threshold": 4000,
   "voice-feedback-enabled": true,
+  "voice-transcription-feedback-enabled": false,
   "voice-feedback-speed": 1.2,
   "voice-feedback-default-speeches": [
     "got it",
     "on its way",
     "yes sir",
     "as you say"
+  ],
+  "voice-feedback-transcription-capable-speeches": [
+    "transcribing...",
+    "getting it...",
+    "manipulating..."
   ],
   "voice-feedback-turning-off": "Ok Bye, Turning off linux voice control"
 }
