--- a/lvc-config.json
+++ b/lvc-config.json
@@ -1,6 +1,6 @@
 {
   "name": "alex",
-  "greeting": "Welcome back!, Initializing Desktop Voice Control",
+  "greeting": "Initializing Desktop Voice Control ...",
   "record-duration": 2,
   "channels": 2,
   "rate": 44100,
