--- a/lvc-config.json
+++ b/lvc-config.json
@@ -1,21 +1,24 @@
 {
   "name": "alex",
-  "greeting": "Initializing Desktop Voice Control ...",
-  "record-duration": 2,
+  "greeting": "Starting Linux Voice Control",
+  "record-duration": 3,
   "channels": 2,
   "rate": 44100,
   "chunk-size": 1024,
   "notifications-enabled": false,
   "logs": true,
-  "speech-threshold": 4000,
+  "speech-threshold": 3000,
+  "live-mode": false,
+  "master-mode": false,
+  "master-mode-barrier-speech-enabled": true,
+  "master-mode-barrier-speech": "Sorry! Master mode is enabled, I cannot process your request!",
   "voice-feedback-enabled": true,
   "voice-transcription-feedback-enabled": false,
   "voice-feedback-speed": 1.2,
   "voice-feedback-default-speeches": [
     "got it",
     "on its way",
-    "yes sir",
-    "as you say"
+    "processing ..."
   ],
   "voice-feedback-transcription-capable-speeches": [
     "transcribing...",
