--- a/lvc-config.json
+++ b/lvc-config.json
@@ -7,7 +7,7 @@
   "chunk-size": 1024,
   "notifications-enabled": false,
   "logs": true,
-  "speech-threshold": 3000,
+  "speech-threshold": 2000,
   "live-mode": false,
   "master-mode": false,
   "master-mode-barrier-speech-enabled": true,
@@ -24,5 +24,5 @@
     "transcribing...",
     "getting it..."
   ],
-  "voice-feedback-turning-off": "Ok Bye, Turning off linux voice control"
+  "voice-feedback-turning-off": "Turning off linux voice control, Bye!"
 }
