Public Preview: 📢 Optimized Command Execution Manager

--- a/lvc-config.json
+++ b/lvc-config.json
@@ -7,13 +7,13 @@
   "chunk-size": 1024,
   "notifications-enabled": false,
   "logs": true,
-  "speech-threshold": 2000,
+  "speech-threshold": 2500,
   "live-mode": false,
   "master-mode": false,
   "master-mode-barrier-speech-enabled": true,
   "master-mode-barrier-speech": "Sorry! Master mode is enabled, I cannot process your request!",
   "voice-feedback-enabled": true,
-  "voice-transcription-feedback-enabled": true,
+  "voice-transcription-feedback-enabled": false,
   "voice-feedback-speed": 1.25,
   "voice-feedback-default-speeches": [
     "got it",
