--- a/lvc-config.json
+++ b/lvc-config.json
@@ -1,6 +1,6 @@
 {
   "name": "alex",
-  "greeting": "Starting Voice Control Engine",
+  "greeting": "Hello Boss!",
   "record-duration": 3,
   "channels": 2,
   "rate": 44100,
@@ -11,10 +11,11 @@
   "live-mode": false,
   "master-mode": false,
   "master-mode-barrier-speech-enabled": true,
-  "master-mode-barrier-speech": "Sorry! Master mode is enabled, I cannot process your request!",
+  "master-mode-barrier-speech": "Unauthorized",
   "voice-feedback-enabled": true,
   "voice-transcription-feedback-enabled": false,
-  "voice-feedback-speed": 1.25,
+  "voice-feedback-speed": 1.27,
+  "voice-cache-enabled": true,
   "voice-feedback-default-speeches": [
     "got it",
     "on its way",
