Public Preview: 🚀 Preparing Live Mode #5!

--- a/lvc-config.json
+++ b/lvc-config.json
@@ -8,7 +8,7 @@
   "notifications-enabled": false,
   "logs": true,
   "speech-threshold": 2500,
-  "live-mode": false,
+  "live-mode": true,
   "master-mode": false,
   "master-mode-barrier-speech-enabled": true,
   "master-mode-barrier-speech": "Unauthorized",
