--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy
+numpy~=1.23.1
 tqdm
 more-itertools
 transformers>=4.19.0
@@ -14,4 +14,6 @@ thefuzz~=0.19.0
 termcolor~=2.0.1
 gTTS~=2.3.0
 mpv~=0.1
-speechbrain
+speechbrain~=0.5.13
+librosa~=0.9.2
+soundfile~=0.11.0
