--- a/lvc-config.json
+++ b/lvc-config.json
@@ -8,7 +8,7 @@
   "notifications-enabled": false,
   "logs": true,
   "speech-threshold": 2500,
-  "live-mode": true,
+  "live-mode": false,
   "master-mode": false,
   "master-mode-barrier-speech-enabled": true,
   "master-mode-barrier-speech": "Unauthorized",
@@ -25,5 +25,5 @@
     "transcribing...",
     "getting it..."
   ],
-  "voice-feedback-turning-off": "Turning off linux voice control, Bye!"
+  "voice-feedback-turning-off": "Turning off linux voice control!"
 }
