Public Preview: 🚀 Improved Performance! 📢 Voice Pitch is now adjustable.

--- a/lvc-config.json
+++ b/lvc-config.json
@@ -1,6 +1,6 @@
 {
   "name": "alex",
-  "greeting": "Initializing voice control...",
+  "greeting": "Greetings!",
   "record-duration": 3,
   "channels": 2,
   "rate": 44100,
@@ -9,19 +9,16 @@
   "show-commands-on-startup": true,
   "logs": true,
   "speech-threshold": 2500,
-  "live-mode": false,
+  "live-mode": true,
   "master-mode": false,
   "master-mode-barrier-speech-enabled": true,
   "master-mode-barrier-speech": "Unauthorized",
+  "voice-pitch": 1.0,
   "voice-feedback-enabled": true,
   "voice-transcription-feedback-enabled": false,
-  "voice-feedback-speed": 1.27,
+  "voice-feedback-speed": 1.35,
   "voice-cache-enabled": true,
-  "voice-feedback-default-speeches": [
-    "got it",
-    "on its way",
-    "processing ..."
-  ],
+  "voice-feedback-default-speeches": [],
   "voice-feedback-transcription-capable-speeches": [
     "transcribing...",
     "getting it..."
