--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click~=8.1.3
 pyaudio~=0.2.11
 pydub
 git+https://github.com/openai/whisper.git
+git+https://github.com/mmabrouk/chatgpt-wrapper.git
 --extra-index-url https://download.pytorch.org/whl/cu113
 torch
 
