Public Preview: 🚀 Increased Accuracy and Enhanced Live Mode #5, Basic Mode and Chat Mode #3!

--- a/lvc-config.json
+++ b/lvc-config.json
@@ -6,7 +6,7 @@
   "rate": 44100,
   "chunk-size": 1024,
   "notifications-enabled": false,
-  "show-commands-on-startup": true,
+  "show-commands-on-startup": false,
   "logs": true,
   "speech-threshold": 3000,
   "live-mode": true,
@@ -19,7 +19,6 @@
   "master-mode": false,
   "master-mode-barrier-speech-enabled": true,
   "master-mode-barrier-speech": "Unauthorized",
-  "voice-pitch": 1.0,
   "voice-feedback-enabled": true,
   "voice-transcription-feedback-enabled": false,
   "voice-feedback-speed": 1.35,
