🤩 Linux Voice Control, Stable again!

--- a/lvc-config.json
+++ b/lvc-config.json
@@ -3,14 +3,14 @@
   "greeting": "Greetings!",
   "record-duration": 3,
   "channels": 2,
-  "rate": 44100,
+  "rate": 48000,
   "chunk-size": 1024,
   "notifications-enabled": false,
   "show-commands-on-startup": false,
   "logs": true,
   "speech-threshold": 3000,
-  "live-mode": true,
-  "use-hot-word-in-basic-mode": true,
+  "live-mode": false,
+  "use-hot-word-in-basic-mode": false,
   "hot-words": [
     "hey alex",
     "here alex",
